# voip-ms

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yaml  live-api-verify.yaml  release.yaml  rust-ci.yaml
examples/: get_balance.rs  get_cdr.rs  get_registration_status.rs  get_reseller_cdr.rs  get_sub_accounts.rs  get_voicemails.rs  list_dids.rs  live_api_verify.rs  send_sms.rs
livetest/: Cargo.toml
livetest/src/: config.rs  main.rs  wire_methods.rs
livetest/src/areas/: account.rs  callflow.rs  cdr.rs  conference.rs  dids.rs  e911.rs  fax.rs  forwarding.rs  ivr.rs  mms.rs  mod.rs  phonebook.rs  porting.rs  probe_macros.rs  queue.rs  reference.rs  reseller.rs  sms.rs  subaccount.rs  voicemail.rs
livetest/src/harness/: area.rs  fixtures.rs  ledger.rs  marker.rs  mod.rs  probe.rs  scope.rs
src/: client.rs  error.rs  generated.rs  lib.rs  responses.rs  types.rs
tests/: client.rs  generated_api_status.rs  generated_enums.rs  generated_params.rs  generated_responses.rs
tools/: api-response-overrides.json  api-responses.json  api-statuses.json  gen.py  server.wsdl
xtask/: Cargo.toml
xtask/src/: check_flags.rs  dump_methods.rs  extract.rs  field_overrides.rs  main.rs  overrides.rs  response_codegen.rs  wsdl.rs
