[workspace]
members = [".", "xtask"]

[package]
name = "voip-ms"
description = "Async client for the voip.ms REST API"
version = "0.1.3"
repository = "https://github.com/ecliptical/voip-ms"
authors = ["Peter Nehrer <pnehrer@eclipticalsoftware.com>"]
license = "MIT"
keywords = ["voip", "voipms", "telephony", "sms", "async"]
categories = ["api-bindings", "asynchronous"]
edition = "2024"
rust-version = "1.88"

[dependencies]
chrono = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["json", "query"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

[features]
default = ["rustls-tls-native-roots"]

# TLS backend selection — pick one that matches your deployment.
# `rustls-tls-native-roots` (default): rustls + system CA roots.
# `rustls-tls-webpki-roots`: rustls + embedded Mozilla roots (good for scratch/distroless).
# `native-tls`: use the platform's native TLS stack.
rustls-tls-native-roots = ["reqwest/rustls", "reqwest/rustls-native-certs"]
rustls-tls-webpki-roots = ["reqwest/rustls", "reqwest/webpki-roots"]
native-tls = ["reqwest/native-tls"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
