
[package]
name = "voip-ms"
description = "Async client for the VoIP.ms REST API"
version = "0.2.0"
repository = "https://github.com/ecliptical/voip-ms"
authors = ["Peter Nehrer <pnehrer@eclipticalsoftware.com>"]
license = "MIT"
keywords = ["voip", "voipms", "telephony", "sms", "async"]
categories = ["api-bindings", "asynchronous"]
edition = "2024"
rust-version = "1.88"

[workspace]
members = [".", "xtask"]

[features]
default = ["rustls-tls-native-roots"]

# TLS backend selection -- pick one that matches your deployment.
# `rustls-tls-native-roots` (default): rustls verifying against the OS trust store.
# `native-tls`: use the platform's native TLS stack.
rustls-tls-native-roots = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
chrono = "0.4"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query"] }
rust_decimal = "1.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
