[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
roxmltree = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
syn = { version = "2.0", default-features = false, features = ["full", "parsing"] }
